Run dnt on CI, add publishing step and tasks

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,3 +23,31 @@ jobs:
       - name: Test
         run: deno test --allow-none
 
+      - name: Get tag version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: get_tag_version
+        run: echo ::set-output name=TAG_VERSION::${GITHUB_REF/refs\/tags\//}
+
+      - name: npm build
+        run: deno run -A ./build_npm.ts ${{steps.get_tag_version.outputs.TAG_VERSION}}
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: latest
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: publish NPM
+        if: startsWith(github.ref, 'refs/tags/')
+        run: cd npm && npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: latest
+          registry-url: 'https://npm.pkg.github.com'
+
+      - name: publish GPR
+        run: cd npm && npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
