Publish job depends on the pipeline job

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,7 @@ jobs:
     name: publish
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
+    needs: pipeline
 
     steps:
       - uses: actions/checkout@v3
