--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,6 +42,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: latest
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Get tag version
         id: get_tag_version
@@ -51,7 +52,12 @@ jobs:
         run: deno run -A ./build_npm.ts ${{steps.get_tag_version.outputs.TAG_VERSION}}
 
       - name: publish NPM
-        run: cd npm && npm publish
+        run: cd npm && npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+      - name: create release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          body_path: CHANGELOG.md
