Reenable doc tests

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         run: deno lint
 
       - name: test
-        run: deno test 
+        run: deno test --doc
 
       - name: dnt
         run: deno run -A ./build_npm.ts
