--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,6 +32,10 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: pipeline
 
+    permissions:
+      contents: read
+      id-token: write
+
     steps:
       - uses: actions/checkout@v4
 
@@ -42,7 +46,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: latest
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: "https://registry.npmjs.org"
 
       - name: Get tag version
         id: get_tag_version
@@ -55,6 +59,9 @@ jobs:
         run: cd npm && npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish package
+        run: npx jsr publish
 
       - name: create release
         uses: softprops/action-gh-release@v1
