--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,26 +5,34 @@ on: [push, pull_request]
 jobs:
   pipeline:
     name: pipeline
+    strategy:
+      matrix:
+        node: ["latest", "lts/*"]
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@v1
+      - uses: pnpm/action-setup@v4.0.0
         with:
-          deno-version: v1.x
+          version: 9.x.x
 
-      - name: formatting
-        run: deno fmt --check
+      - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node }}
+          cache: "pnpm"
 
-      - name: linting
-        run: deno lint
+      - name: Install and build
+        run: pnpm install --frozen-lockfile
 
-      - name: test
-        run: deno test --doc
+      - name: Lint
+        run: pnpm check
 
-      - name: dnt
-        run: deno run -A ./build_npm.ts
+      - name: Build
+        run: pnpm build
+
+      - name: Test
+        run: pnpm test
 
   publish:
     name: publish
@@ -33,38 +41,37 @@ jobs:
     needs: pipeline
 
     permissions:
-      contents: read
+      contents: write
       id-token: write
 
     steps:
       - uses: actions/checkout@v4
 
-      - uses: denoland/setup-deno@v1
+      - uses: pnpm/action-setup@v4.0.0
         with:
-          deno-version: v1.x
+          version: 9.x.x
 
       - uses: actions/setup-node@v4
         with:
           node-version: latest
           registry-url: "https://registry.npmjs.org"
+          cache: "pnpm"
 
-      - name: Get tag version
-        id: get_tag_version
-        run: echo ::set-output name=TAG_VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: Install and build
+        run: pnpm install --frozen-lockfile
 
       - name: npm build
-        run: deno run -A ./build_npm.ts ${{steps.get_tag_version.outputs.TAG_VERSION}}
+        run: pnpm release
 
       - name: publish NPM
-        run: cd npm && npm publish --access=public
+        run: pnpm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish package
-        run: npx jsr publish
+        run: pnpm dlx jsr publish
 
       - name: create release
         uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/v')
         with:
           body_path: CHANGELOG.md
